Add loading to multiple graphs
#917