@@ -5,32 +5,19 @@ import com.linkedpipes.etl.dataunit.core.rdf.SingleGraphDataUnit;
 import com.linkedpipes.etl.executor.api.v1.LpException;
 import com.linkedpipes.etl.executor.api.v1.component.Component;
 import com.linkedpipes.etl.executor.api.v1.component.SequentialExecution;
+import com.linkedpipes.etl.executor.api.v1.rdf.RdfException;
+import com.linkedpipes.etl.executor.api.v1.rdf.pojo.RdfToPojoLoader;
 import com.linkedpipes.etl.executor.api.v1.service.ExceptionFactory;
 import org.apache.http.HttpEntity;
-import org.apache.http.ParseException;
-import org.apache.http.auth.AuthScope;
-import org.apache.http.auth.UsernamePasswordCredentials;
-import org.apache.http.client.CredentialsProvider;
-import org.apache.http.client.config.RequestConfig;
-import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpEntityEnclosingRequestBase;
 import org.apache.http.client.methods.HttpPost;
 import org.apache.http.client.methods.HttpPut;
-import org.apache.http.client.protocol.HttpClientContext;
 import org.apache.http.entity.ContentType;
 import org.apache.http.entity.FileEntity;
 import org.apache.http.entity.mime.MultipartEntityBuilder;
 import org.apache.http.entity.mime.content.FileBody;
-import org.apache.http.impl.client.BasicCredentialsProvider;
 import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClients;
-import org.apache.http.util.EntityUtils;
-import org.eclipse.rdf4j.model.Literal;
-import org.eclipse.rdf4j.query.Binding;
-import org.eclipse.rdf4j.query.QueryLanguage;
-import org.eclipse.rdf4j.query.TupleQueryResult;
-import org.eclipse.rdf4j.repository.RepositoryConnection;
-import org.eclipse.rdf4j.repository.sparql.SPARQLRepository;
 import org.eclipse.rdf4j.rio.RDFFormat;
 import org.eclipse.rdf4j.rio.Rio;
 import org.slf4j.Logger;
@@ -38,13 +25,16 @@ import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 public class GraphStoreProtocol implements Component, SequentialExecution {
 
-    private static final Logger LOG
+    private static Logger LOG
             = LoggerFactory.getLogger(GraphStoreProtocol.class);
 
     @Component.ContainsConfiguration
@@ -54,191 +44,186 @@ public class GraphStoreProtocol implements Component, SequentialExecution {
     @Component.InputPort(iri = "InputFiles")
     public FilesDataUnit inputFiles;
 
+    @Component.InputPort(iri = "InputRdf")
+    public SingleGraphDataUnit inputRdf;
+
     @Component.Configuration
     public GraphStoreProtocolConfiguration configuration;
 
     @Component.Inject
     public ExceptionFactory exceptionFactory;
 
+    protected HttpService httpClient;
+
     @Override
     public void execute() throws LpException {
+        checkConfiguration();
+        httpClient = new HttpService(
+                configuration.isUseAuthentification(),
+                configuration.getUserName(),
+                configuration.getPassword(),
+                configuration.getEndpoint());
+        Map<String, Entry> entries = loadEntries();
+        for (FilesDataUnit.Entry entry : inputFiles) {
+            executeEntry(entry, entries.get(entry.getFileName()));
+        }
+    }
+
+    private void checkConfiguration() throws LpException {
         if (configuration.getEndpoint() == null
                 || configuration.getEndpoint().isEmpty()) {
             throw exceptionFactory.failure("Missing property: {}",
                     GraphStoreProtocolVocabulary.HAS_CRUD);
         }
-        //
         if (inputFiles.size() > 1 && configuration.isReplace()) {
             throw exceptionFactory.failure("Only one file can be uploaded"
                     + "with replace mode.");
         }
-        //
+    }
+
+    private Map<String, Entry> loadEntries() throws RdfException {
+        List<String> resources = inputRdf.asRdfSource().getByType(
+                GraphStoreProtocolVocabulary.ENTRY);
+        Map<String, Entry> result = new HashMap<>();
+        for (String resource : resources) {
+            Entry entry = new Entry();
+            RdfToPojoLoader.loadByReflection(
+                    inputRdf.asRdfSource(), resource, entry);
+            result.put(entry.fileName, entry);
+        }
+        return result;
+    }
+
+    private void executeEntry(FilesDataUnit.Entry fileEntry, Entry entry)
+            throws LpException {
+        Optional<RDFFormat> rdfFormat
+                = Rio.getParserFormatForFileName(fileEntry.getFileName());
+        if (rdfFormat.isEmpty()) {
+            throw exceptionFactory.failure(
+                    "Can't determine format for file: {}", fileEntry);
+        }
+        if (rdfFormat.get().supportsContexts()) {
+            throw exceptionFactory.failure(
+                    "Quad-based formats are not supported.");
+        }
+        String graph = configuration.getTargetGraph();
+        if (entry != null) {
+            graph = entry.targetGraph;
+        }
         Long beforeSize = null;
-        Long afterSize = null;
         if (configuration.isCheckSize()) {
             try {
-                beforeSize = getGraphSize();
+                beforeSize = getGraphSize(graph);
             } catch (IOException ex) {
                 throw exceptionFactory.failure("Can't get graph size.", ex);
             }
         }
-        for (final FilesDataUnit.Entry entry : inputFiles) {
-            final Optional<RDFFormat> rdfFormat
-                    = Rio.getParserFormatForFileName(entry.getFileName());
-            if (!rdfFormat.isPresent()) {
-                throw exceptionFactory.failure(
-                        "Can't determine format for file: {}", entry);
-            }
-            if (rdfFormat.get().supportsContexts()) {
-                throw exceptionFactory.failure(
-                        "Quad-based formats are not supported.");
-            }
-            final String mimeType = rdfFormat.get().getDefaultMIMEType();
-            //
-            LOG.debug("Use repository: {}", configuration.getRepository());
-            switch (configuration.getRepository()) {
-                case BLAZEGRAPH:
-                    uploadBlazegraph(configuration.getEndpoint(),
-                            entry.toFile(), mimeType,
-                            configuration.getTargetGraph(),
-                            configuration.isReplace());
-                    break;
-                case FUSEKI:
-                    uploadFuseki(configuration.getEndpoint(),
-                            entry.toFile(), mimeType,
-                            configuration.getTargetGraph(),
-                            configuration.isReplace());
-                    break;
-                case VIRTUOSO:
-                    uploadVirtuoso(configuration.getEndpoint(),
-                            entry.toFile(), mimeType,
-                            configuration.getTargetGraph(),
-                            configuration.isReplace());
-                    break;
-                default:
-                    throw exceptionFactory.failure("Unknown repository type!");
-            }
-            if (configuration.isCheckSize()) {
-                try {
-                    afterSize = getGraphSize();
-                } catch (IOException ex) {
-                    throw exceptionFactory.failure("Can't get graph size.", ex);
-                }
-            }
-        }
-        if (beforeSize != null) {
-            LOG.info("Before graph size: {}", beforeSize);
-        }
-        if (afterSize != null) {
-            LOG.info("After graph size: {}", afterSize);
-        }
-    }
-
-    /**
-     * @return Size of a remote graph.
-     */
-    private long getGraphSize() throws LpException, IOException {
-        final SPARQLRepository repository = new SPARQLRepository(
-                configuration.getEndpointSelect());
-        // Does nothing on SPARQLRepository.
-        repository.initialize();
+        String mimeType = rdfFormat.get().getDefaultMIMEType();
         //
-        long size;
-        try (final CloseableHttpClient httpclient = getNonAuthHttpClient()) {
-            repository.setHttpClient(httpclient);
-            try (RepositoryConnection connection = repository.getConnection()) {
-                final String query = "SELECT (count(*) as ?count) WHERE { "
-                        + "GRAPH <" + configuration.getTargetGraph()
-                        + "> { ?s ?p ?o } }";
-                final TupleQueryResult result = connection.prepareTupleQuery(
-                        QueryLanguage.SPARQL, query).evaluate();
-                if (!result.hasNext()) {
-                    // Empty result.
-                    throw exceptionFactory.failure(
-                            "Remote query for size does not return any value.");
-                }
-                final Binding binding = result.next().getBinding("count");
-                size = ((Literal) binding.getValue()).longValue();
-            }
-        } finally {
-            repository.shutDown();
+        LOG.debug("Using repository: {}", configuration.getRepository());
+        switch (configuration.getRepository()) {
+            case BLAZEGRAPH:
+                uploadBlazegraph(configuration.getEndpoint(),
+                        fileEntry.toFile(), mimeType, graph,
+                        configuration.isReplace());
+                break;
+            case FUSEKI:
+                uploadFuseki(configuration.getEndpoint(),
+                        fileEntry.toFile(), mimeType, graph,
+                        configuration.isReplace());
+                break;
+            case VIRTUOSO:
+                uploadVirtuoso(configuration.getEndpoint(),
+                        fileEntry.toFile(), mimeType, graph,
+                        configuration.isReplace());
+                break;
+            case GRAPHDB:
+                uploadGraphDb(configuration.getEndpoint(),
+                        fileEntry.toFile(), mimeType, graph,
+                        configuration.isReplace());
+                break;
+            default:
+                throw exceptionFactory.failure("Unknown repository type!");
         }
-        LOG.info("Graph size: {}", size);
-        return size;
+
+        if (configuration.isCheckSize()) {
+            long afterSize;
+            try {
+                afterSize = getGraphSize(graph);
+            } catch (IOException ex) {
+                throw exceptionFactory.failure("Can't get graph size.", ex);
+            }
+            LOG.info(
+                    "Graph '{}' size changed from {} to {} by uploading '{}'.",
+                    graph, beforeSize, afterSize, fileEntry.getFileName());
+        }
     }
 
-    private void uploadBlazegraph(String url, File file, String mimeType,
+    protected long getGraphSize(String graph) throws LpException, IOException {
+        try (CloseableHttpClient httpclient = HttpClients.custom().build()) {
+            long result = GraphSize.getGraphSize(
+                    httpclient, configuration.getEndpointSelect(), graph);
+            LOG.info("Graph '{}' size: {}", graph, result);
+            return result;
+        }
+    }
+
+    protected void uploadBlazegraph(
+            String url, File file, String mimeType,
             String graph, boolean replace) throws LpException {
         LOG.info("Blazegraph: {} {} {} {} {}", url, file.getName(), mimeType,
                 graph, replace);
-        //
-        try {
-            url += "?context-uri=" + URLEncoder.encode(graph, "UTF-8");
-        } catch (UnsupportedEncodingException ex) {
-            throw exceptionFactory.failure("URLEncoder failure.", ex);
-        }
-        //
-        final HttpEntityEnclosingRequestBase httpMethod;
+        url += "?graph=" + URLEncoder.encode(
+                graph, StandardCharsets.UTF_8);
+        HttpEntityEnclosingRequestBase httpMethod;
         if (replace) {
             // Blaze graph delete statements based on provided query.
-            final String query = "CONSTRUCT{ ?s ?p ?o} FROM <" + graph
+            String query = "CONSTRUCT{ ?s ?p ?o} FROM <" + graph
                     + "> WHERE { ?s ?p ?o }";
-            try {
-                url += "&query=" + URLEncoder.encode(query, "UTF-8");
-            } catch (UnsupportedEncodingException ex) {
-                throw exceptionFactory.failure("URLEncoder failure.", ex);
-            }
+            url += "&query=" + URLEncoder.encode(
+                    query, StandardCharsets.UTF_8);
             //
             httpMethod = new HttpPut(url);
         } else {
             httpMethod = new HttpPost(url);
         }
-        LOG.debug("url: {}", url);
-        httpMethod.setEntity(new FileEntity(file,
-                ContentType.create(mimeType)));
+        httpMethod.setEntity(
+                new FileEntity(file, ContentType.create(mimeType)));
         //
-        executeHttp(httpMethod);
+        httpClient.executeHttp(httpMethod);
     }
 
-    private void uploadFuseki(String url, File file, String mimeType,
+    protected void uploadFuseki(
+            String url, File file, String mimeType,
             String graph, boolean replace) throws LpException {
         LOG.info("Fuseki: {} {} {} {} {}", url, file.getName(), mimeType,
                 graph, replace);
         //
-        try {
-            url += "?graph=" + URLEncoder.encode(graph, "UTF-8");
-        } catch (UnsupportedEncodingException ex) {
-            throw exceptionFactory.failure("URLEncoder failure.", ex);
-        }
-        //
-        final HttpEntityEnclosingRequestBase httpMethod;
+        url += "?graph=" + URLEncoder.encode(graph, StandardCharsets.UTF_8);
+        HttpEntityEnclosingRequestBase httpMethod;
         if (replace) {
             httpMethod = new HttpPut(url);
         } else {
             httpMethod = new HttpPost(url);
         }
-        final FileBody fileBody = new FileBody(file,
+        FileBody fileBody = new FileBody(file,
                 ContentType.create(mimeType), "file");
-        final HttpEntity entity = MultipartEntityBuilder.create()
+        HttpEntity entity = MultipartEntityBuilder.create()
                 .addPart("file", fileBody)
                 .build();
         httpMethod.setEntity(entity);
         //
-        executeHttp(httpMethod);
+        httpClient.executeHttp(httpMethod);
     }
 
-    private void uploadVirtuoso(String url, File file, String mimeType,
+    protected void uploadVirtuoso(
+            String url, File file, String mimeType,
             String graph, boolean replace) throws LpException {
         LOG.info("Virtuoso: {} {} {} {} {}", url, file.getName(), mimeType,
                 graph, replace);
         //
-        try {
-            url += "?graph=" + URLEncoder.encode(graph, "UTF-8");
-        } catch (UnsupportedEncodingException ex) {
-            throw exceptionFactory.failure("URLEncoder failure.", ex);
-        }
-        //
-        final HttpEntityEnclosingRequestBase httpMethod;
+        url += "?graph=" + URLEncoder.encode(graph, StandardCharsets.UTF_8);
+        HttpEntityEnclosingRequestBase httpMethod;
         if (replace) {
             httpMethod = new HttpPut(url);
         } else {
@@ -248,82 +233,26 @@ public class GraphStoreProtocol implements Component, SequentialExecution {
         httpMethod.setEntity(new FileEntity(file,
                 ContentType.create(mimeType)));
         //
-        executeHttp(httpMethod);
+        httpClient.executeHttp(httpMethod);
     }
 
-    private void executeHttp(HttpEntityEnclosingRequestBase httpMethod)
-            throws LpException {
-        final CloseableHttpClient httpClient;
-        // We use shared context.
-        final HttpClientContext context = HttpClientContext.create();
-        if (!configuration.isUseAuthentification()) {
-            httpClient = HttpClients.custom().build();
-        } else {
-            // Use preemptive authentication.
-            final CredentialsProvider creds = new BasicCredentialsProvider();
-            creds.setCredentials(
-                    new AuthScope(AuthScope.ANY_HOST, AuthScope.ANY_PORT),
-                    new UsernamePasswordCredentials(
-                            configuration.getUserName(),
-                            configuration.getPassword()));
-            //
-            final RequestConfig requestConfig = RequestConfig.custom()
-                    .setAuthenticationEnabled(true).build();
-            //
-            httpClient = HttpClients.custom()
-                    .setDefaultRequestConfig(requestConfig)
-                    .setDefaultCredentialsProvider(creds)
-                    .build();
-        }
-        // Do an empty request just to get the validation into a cache.
-        // This is requires as for example Virtuoso will refuse the first
-        // request and ask for authorization. However as the first request
-        // can be too big - it would looks like a failure to us
-        // (as Virtuoso just close the connection before reading all the data).
-        if (configuration.isUseAuthentification()) {
-            final HttpEntityEnclosingRequestBase emptyRequest
-                    = new HttpPut(configuration.getEndpoint());
-            try (final CloseableHttpResponse response
-                         = httpClient.execute(emptyRequest, context)) {
-            } catch (Exception ex) {
-                LOG.info("Exception during first empty request:", ex);
-            }
-        }
+    protected void uploadGraphDb(
+            String url, File file, String mimeType,
+            String graph, boolean replace) throws LpException {
+        LOG.info("GraphDB: {} {} {} {} {}", url, file.getName(), mimeType,
+                graph, replace);
         //
-        try (final CloseableHttpResponse response
-                     = httpClient.execute(httpMethod, context)) {
-            try {
-                LOG.debug("Response:\n {} ",
-                        EntityUtils.toString(response.getEntity()));
-            } catch (java.net.SocketException ex) {
-                LOG.error("Can't read response.", ex);
-            }
-            LOG.info("Response code: {} phrase: {}",
-                    response.getStatusLine().getStatusCode(),
-                    response.getStatusLine().getReasonPhrase());
-            final int statusCode = response.getStatusLine().getStatusCode();
-            if (statusCode >= 400) {
-                throw exceptionFactory.failure(
-                        "Can't upload data, status: {} \n Server response: {}",
-                        statusCode,
-                        response.getStatusLine().getReasonPhrase());
-            }
-        } catch (IOException | ParseException ex) {
-            throw exceptionFactory.failure("Can't execute request.", ex);
-        } finally {
-            try {
-                httpClient.close();
-            } catch (IOException ex) {
-                throw exceptionFactory.failure("Can't close request.", ex);
-            }
+        url += "?graph=" + URLEncoder.encode(graph, StandardCharsets.UTF_8);
+        HttpEntityEnclosingRequestBase httpMethod;
+        if (replace) {
+            httpMethod = new HttpPut(url);
+        } else {
+            httpMethod = new HttpPost(url);
         }
-    }
-
-    /**
-     * @return Must be closed after use.
-     */
-    private CloseableHttpClient getNonAuthHttpClient() {
-        return HttpClients.custom().build();
+        ContentType contentType = ContentType.create(mimeType);
+        httpMethod.setEntity(new FileEntity(file, contentType));
+        //
+        httpClient.executeHttp(httpMethod);
     }
 
 }
